# Illumination_appearance

./: README.md  bilateral_filtering.cpp  sphere_ct_alum_bronze.exr  sphere_ct_blue_acrylic.exr  vector-cooktorrance.cpp
Photography_Lighting/: .directory  CMakeCache.txt  CMakeLists.txt  Makefile  bilateral_filtering  cmake_install.cmake  image_convert  matrix_example
Photography_Lighting/cmake/: FindCBLAS.cmake  FindCLapack.cmake  FindOpenEXR.cmake
Photography_Lighting/include/: Endian.detail.h  Endian.h  absoluteValue.h  buffer2d.h  buffer2d.inline.h  buffer2dIO.exr.detail.h  buffer2dIO.exr.h  buffer2dIO.exr.options.h  buffer2dIO.h  buffer2dIO.jpg.h  buffer2dIO.pfm.h  buffer2dIO.png.h  buffer2dIO.ppm.h  buffer2dIO.tif.detail.h  buffer2dIO.tif.h  buffer2dIO.tif.options.h  buffer2dIO.util.h  buffer2dIllegalSize.h  clapack.h  color.h  copyFrom.h  customException.h  exceptions.h  f2c.h  fileNotFound.h  image.h  imageIO.h  imageIO.inline.h  iteratorWrapper.h  mat.h  mat.inline.h  mat_operations.h  offset_iterator.h  raises.h  tempArray.h  unrecognizedFormat.h  unsupportedFormat.h  vec3d.h  vec3d.inline.h  zeroLengthVector.h
Photography_Lighting/script/: cmake_cleanup
